fix: irregular coin wall issue on safari & firefox

--- a/frontend/src/components/Connection.css
+++ b/frontend/src/components/Connection.css
@@ -10,5 +10,5 @@
 
 .connection svg {
   font-size: 1.5rem;
-  color: #230c0f;
+  color: var(--app-brown);
 }
